fix expand/collapse state - the js still needs a little bit of work - but it works now

--- a/phpgwapi/templates/newdesign/css/base.css
+++ b/phpgwapi/templates/newdesign/css/base.css
@@ -241,14 +241,14 @@ div.treeview
 	padding: 0.2em;
 }
 
-#navbar ul
-{
-	display: none;
-}
-
 #navbar ul.expanded
 {
 	display: block;
+}
+
+#navbar ul.collapsed
+{
+	display: none;
 }
 
 #navbar li
